<resources>
    <string name="app_name">Faza 1 - Baicu Andrei</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="oceania">Oceania</string>
    <string name="select_a_continent">Select a Continent</string>
    <string name="favourites">Favourites</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="to">To</string>
    <string name="baicuandrei62_gmail_com">baicuandrei62@gmail.com</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="filter_by">Filter BY:</string>
    <string name="rate_us">Rate us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thank_you_for_using_our_app_please_take_a_few_moments_to_rate_the_following_aspects_about_this_app_based_on_your_feedback_we_could_improve_your_experience">Thank you for using our App! Please take a few moments to rate the following aspects about this app. Based on your feedback we could improve your experience.</string>
    <string name="avg_grade_provided">Avg. grade provided:</string>
    <string name="loading">Loading...</string>
    <string name="capital2">Capital:</string>
    <string name="population2">Population:</string>
    <string name="title_activity_location_of_country">Map</string>
</resources>
