<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="?attr/backgroundcolor"
    tools:context=".Feedback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:background="@drawable/rounded_back"
        android:padding="10dp">

        <TextView
            android:textColor="?attr/textcolor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/to"
            android:textSize="20sp"
            android:padding="10dp"/>


        <EditText
            android:textColor="?attr/textcolor"
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/baicuandrei62_gmail_com"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:background="@drawable/rounded_back"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="?attr/textcolor"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/subject"
            android:textSize="20sp"
            android:padding="10dp"/>


        <EditText
            android:id="@+id/subjectID"
            android:textColor="?attr/textcolor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <EditText
        android:id="@+id/messageID"
        android:layout_width="match_parent"
        android:textColor="?attr/textcolor"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        android:hint="@string/message"
        android:textColorHint="?attr/textcolor"
        android:gravity="top"
        android:background="@drawable/rounded_back"/>

        <Button
            android:background="@drawable/btn_round"
            android:textColor="?attr/btnTextColor"

            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/send"
            android:textSize="20sp"
            android:id="@+id/btnSend"/>
    </LinearLayout>


</LinearLayout>
